# rust_fred

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: base.rs  client.rs  data.rs  info.rs  lib.rs  main.rs  search.rs
